# cargo-reaper

./: .deny.toml  .gitignore  404.html  Cargo.toml  LICENSE  README.md  build.rs  commands.html  configuration-file.html  flake.nix  index.html  introduction.html  platform-support.html  plugin-manifest.html  print.html  searcher-c2a407aa.js  searchindex-99cb1245.js  searchindex.js  toc-dfbebf66.js  toc.html  toc.js
.github/workflows/: build-windows-msvc.yml  ci.yml  gh-pages.yml  nix-flake-check.yml  pull-request.yml  update-cachix.yml
appendix/: glossary.html
commands/: build.html  clean.html  completions.html  link.html  list.html  new.html  run.html
docs/: book.toml
docs/src/: SUMMARY.md  commands.md  configuration-file.md  introduction.md  platform-support.md  plugin-manifest.md
docs/src/appendix/: glossary.md
docs/src/commands/: build.md  clean.md  completions.md  link.md  list.md  new.md  run.md
lib/: default.nix
src/: cli.rs  command.rs  config.rs  error.rs  main.rs  util.rs
src/command/: build.rs  clean.rs  link.rs  list.rs  new.rs  run.rs
templates/extension/: Cargo.toml  reaper.toml
templates/extension/src/: lib.rs
templates/vst/: Cargo.toml
templates/vst/src/: lib.rs
test_data/package_manifest/: Cargo.toml
test_data/workspace_manifest_complex/: reaper.toml
test_data/workspace_manifest_complex/src/extension_0/: Cargo.toml
test_data/workspace_manifest_complex/src/extension_1/: Cargo.toml
test_data/workspace_manifest_complex/src/extension_2/: Cargo.toml
tests/: default.nix
tests/plugin_manifests/package_manifest/: Cargo.toml
tests/plugin_manifests/workspace_manifest/: Cargo.toml
tests/plugin_manifests/workspace_manifest/src/extension_1/src/: lib.rs
tests/plugin_manifests/workspace_package_manifest/: Cargo.toml  reaper.toml
tests/test_data/package_manifest/: Cargo.toml  reaper.toml
tests/test_data/workspace_manifest_complex/: Cargo.toml
tests/test_data/workspace_manifest_complex/src/extension_2/: Cargo.toml
