[package]
name = "cargo-reaper"
version = "0.1.0"
authors = ["Cloud Scythe Labs <cloudscythelabs@gmail.com>"]
description = "A Cargo plugin for developing REAPER extension plugins with Rust."
edition = "2024"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
anyhow = "1"
cargo_toml = "0.22"
clap = { version = "4.5", features = ["derive"] }
codespan-reporting = "0.12"
colored = "3"
dirs = "6"
gix = { version = "0.72", default-features = false }
humantime = "2.2"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
serde = "1"
tempfile = "3.19"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
toml_edit = "0.22"
which = "7.0"
whoami = "1.6"
zip = "3"
