[package]
name = "cargo-reaper"
version = "0.2.0"
authors = ["Cloud Scythe Labs <cloudscythelabs@gmail.com>"]
description = "A Cargo plugin for developing REAPER extension plugins with Rust."
build = "build.rs"
edition = "2024"
license = "MIT"
readme = "README.md"
publish = true

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
humantime = "2.2"

[dependencies]
anyhow = "1"
cargo_toml = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
codespan-reporting = "0.12"
colored = "3"
dirs = "6"
gix = { version = "0.72", default-features = false }
humantime = "2.2"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
serde = "1"
tempfile = "3.19"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
toml_edit = "0.22"
which = "7.0"
whoami = { version = "1.6", default-features = false }
zip = { version = "3", default-features = false, features = [
  "deflate",
  "time",
] }
