[package]
name = "cargo-reaper"
version = "0.3.0"
authors = ["Cloud Scythe Labs <cloudscythelabs@gmail.com>"]
description = "A Cargo plugin for developing REAPER extension and VST plugins with Rust."
build = "build.rs"
edition = "2024"
license = "MIT"
readme = "README.md"
include = [
  "src",
  "Cargo.toml",
  "Cargo.lock",
  "build.rs",
  "templates",
  "!/docs/**",
  "README.md",
  "LICENSE",
]
publish = true

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3"
humantime = "2.2"

[dependencies]
anyhow = "1"
cargo_toml = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
codespan-reporting = "0.12"
colored = "3"
dirs = "6"
gix = { version = "0.72", default-features = false }
humantime = "2.2"
include_dir = "0.7"
serde = "1"
tempfile = "3.19"
toml = "0.8"
toml_edit = "0.22"
which = "7.0"
whoami = { version = "1.6", default-features = false }
