[package]
name = "reaper_extension_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }

[lib]
name = "_extension_plugin"
crate-type = ["cdylib"]
