[package]
name = "package_manifest"
version = "0.1.0"
edition = "2021"

[dependencies]
fragile = "2.0.1"
reaper-low = { git = "https://github.com/Cloud-Scythe-Labs/reaper-rs.git", branch = "eureka-cpu/100" }
reaper-macros = { git = "https://github.com/Cloud-Scythe-Labs/reaper-rs.git", branch = "eureka-cpu/100" }
reaper-medium = { git = "https://github.com/Cloud-Scythe-Labs/reaper-rs.git", branch = "eureka-cpu/100" }

[lib]
name = "_package_extension"
crate-type = ["cdylib"]
