[workspace.metadata.crane]
name = "workspace_manifest"

[workspace.package]
name = "workspace_manifest"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
fragile = "2.0.1"
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
