[workspace.metadata.crane]
name = "workspace_package_manifest"

[workspace]
resolver = "2"
members = []

[package]
name = "workspace_package_manifest"
version = "0.1.0"
edition = "2021"

[dependencies]
fragile = "2.0.1"
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }

[lib]
name = "_workspace_package_extension"
crate-type = ["cdylib"]
