[workspace.package]
name = "workspace_manifest_complex"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
fragile = "2.0.1"
