[package]
name = "extension_2"
version.workspace = true
description = "Suspendisse sodales cursus ullamcorper. Aenean interdum ante quis massa facilisis lobortis. Vivamus nulla odio, tincidunt in suscipit sed, tincidunt quis dui. Nam nisl risus, fringilla vel felis ut, lobortis vulputate felis."
edition.workspace = true
authors = ["author_2 <author_2@example.com>"]

[lib]
name = "_ext_2"
crate-type = ["cdylib"]

[dependencies]
fragile.workspace = true
reaper-low.workspace = true
reaper-macros.workspace = true
reaper-medium.workspace = true
